--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <section>
-        <h1 class="game--title">Tic Tac Toe</h1>
+        <center><h1 class="game--title">Tic Tac Toe</h1></center>
         <div class="game--container">
             <div data-cell-index="0" class="cell"></div>
             <div data-cell-index="1" class="cell"></div>
@@ -22,9 +22,15 @@
             <div data-cell-index="7" class="cell"></div>
             <div data-cell-index="8" class="cell"></div>
         </div>
-        <h2 class="game--status"></h2>
+        <center><h2 class="game--status"></h2></center>
         <button class="game--restart">Restart Game</button>
     </section>
+	<br><hr>
+    <footer>
+    	<center>
+    		<h4>Created By: <a href="https://www.haritsaini.tech">Harit Saini</h4>
+    	</center>
+    </footer>
 <script src="script.js"></script>
 </body>
 </html>
